Bug 215745 - Kate Crash after trying to copy a text-snipped over a text-folded area. [KateLineLayout::textLine, KateLayoutCache::line, KateLayoutCache::updateViewCache]
Summary: Kate Crash after trying to copy a text-snipped over a text-folded area. [Kate...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-22 21:52 UTC by Tomaz Canabrava
Modified: 2009-11-22 23:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomaz Canabrava 2009-11-22 21:52:04 UTC
Application: kate (3.3.77)
KDE Version: 4.3.77 (KDE 4.3.77 (KDE 4.4 >= 20091120)) (Compiled from sources)
Qt Version: 4.6.0
Operating System: Linux 2.6.31-ARCH x86_64
Distribution (Platform): Archlinux Packages

What I was doing when the application crashed:
Kate crashed after trying to copy a text ( using the accelerator ctrl + c ) on an html file that had it's div's collapsed using kate-'s text-folds.

 -- Backtrace:
Application: Kate (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0x7f19c5546760 (LWP 17586))]

Thread 2 (Thread 0x7f19aeb9d710 (LWP 17587)):
#0  0x00007f19c4c1307c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f19aef3323f in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7f19af27db40) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2304
#2  0x00007f19aef3288a in WTF::TCMalloc_PageHeap::runScavengerThread (context=0x7f19af27db40) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1438
#3  0x00007f19c4c0e81a in start_thread () from /lib/libpthread.so.0
#4  0x00007f19c10488cd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f19c5546760 (LWP 17586)):
[KCrash Handler]
#5  0x00007f19c0fac045 in raise () from /lib/libc.so.6
#6  0x00007f19c0fad470 in abort () from /lib/libc.so.6
#7  0x00007f19c4eb3d8d in qt_message_output (msgType=QtFatalMsg, buf=0x3c17738 "ASSERT: \"m_textLine\" in file /data/Projetos/kdesvn/kdelibs/kate/render/katelinelayout.cpp, line 69")
    at global/qglobal.cpp:2212
#8  0x00007f19c4eb3f6c in qt_message (msgType=QtFatalMsg, msg=0x7f19c5071198 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffd9195b00) at global/qglobal.cpp:2258
#9  0x00007f19c4eb47d9 in qFatal (msg=0x7f19c5071198 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2441
#10 0x00007f19c4eb391f in qt_assert (assertion=0x7f19af4bd3b1 "m_textLine", file=0x7f19af4bd370 "/data/Projetos/kdesvn/kdelibs/kate/render/katelinelayout.cpp", line=69) at global/qglobal.cpp:1975
#11 0x00007f19af3a3d32 in KateLineLayout::textLine (this=0x3a3f2e0, reloadForce=true) at /data/Projetos/kdesvn/kdelibs/kate/render/katelinelayout.cpp:69
#12 0x00007f19af39e940 in KateLayoutCache::line (this=0x3b38e60, realLine=188, virtualLine=57) at /data/Projetos/kdesvn/kdelibs/kate/render/katelayoutcache.cpp:292
#13 0x00007f19af39e6c4 in KateLayoutCache::updateViewCache (this=0x3b38e60, startPos=..., newViewLineCount=30, viewLinesScrolled=0)
    at /data/Projetos/kdesvn/kdelibs/kate/render/katelayoutcache.cpp:265
#14 0x00007f19af40755d in KateViewInternal::doUpdateView (this=0x3a20c20, changed=false, viewLinesScrolled=0) at /data/Projetos/kdesvn/kdelibs/kate/view/kateviewinternal.cpp:596
#15 0x00007f19af407409 in KateViewInternal::updateView (this=0x3a20c20, changed=false, viewLinesScrolled=0) at /data/Projetos/kdesvn/kdelibs/kate/view/kateviewinternal.cpp:572
#16 0x00007f19af407ff2 in KateViewInternal::slotRegionVisibilityChangedAt (this=0x3a20c20, clear_cache=false) at /data/Projetos/kdesvn/kdelibs/kate/view/kateviewinternal.cpp:716
#17 0x00007f19af40366e in KateViewInternal::qt_metacall (this=0x3a20c20, _c=QMetaObject::InvokeMetaMethod, _id=18, _a=0x7fffd9196140)
    at /data/Projetos/kdesvn/build/kdelibs/kate/kateviewinternal.moc:143
#18 0x00007f19c4ff0569 in QMetaObject::metacall (object=0x3a20c20, cl=QMetaObject::InvokeMetaMethod, idx=45, argv=0x7fffd9196140) at kernel/qmetaobject.cpp:237
#19 0x00007f19c5006957 in QMetaObject::activate (sender=0x37649e0, m=0x7f19af739da0, local_signal_index=0, argv=0x7fffd9196140) at kernel/qobject.cpp:3399
#20 0x00007f19af3e65e9 in KateCodeFoldingTree::regionVisibilityChangedAt (this=0x37649e0, _t1=178, _t2=false) at /data/Projetos/kdesvn/build/kdelibs/kate/katecodefolding.moc:112
#21 0x00007f19af3eae8a in KateCodeFoldingTree::toggleRegionVisibility (this=0x37649e0, line=178) at /data/Projetos/kdesvn/kdelibs/kate/syntax/katecodefolding.cpp:1412
#22 0x00007f19af34a4a7 in KateDocument::editRemoveLines (this=0x3d083b0, from=37, to=191, editSource=Kate::NoEditSource) at /data/Projetos/kdesvn/kdelibs/kate/document/katedocument.cpp:1453
#23 0x00007f19af34708f in KateDocument::removeText (this=0x3d083b0, _range=..., block=false) at /data/Projetos/kdesvn/kdelibs/kate/document/katedocument.cpp:796
#24 0x00007f19af3fe340 in KateView::removeSelectedText (this=0x3b4a9b0) at /data/Projetos/kdesvn/kdelibs/kate/view/kateview.cpp:1778
#25 0x00007f19af3ff1e3 in KateView::cut (this=0x3b4a9b0) at /data/Projetos/kdesvn/kdelibs/kate/view/kateview.cpp:1902
#26 0x00007f19af3ee4cb in KateView::qt_metacall (this=0x3b4a9b0, _c=QMetaObject::InvokeMetaMethod, _id=18, _a=0x7fffd91966a0) at /data/Projetos/kdesvn/build/kdelibs/kate/kateview.moc:326
#27 0x00007f19c4ff0569 in QMetaObject::metacall (object=0x3b4a9b0, cl=QMetaObject::InvokeMetaMethod, idx=57, argv=0x7fffd91966a0) at kernel/qmetaobject.cpp:237
#28 0x00007f19c5006957 in QMetaObject::activate (sender=0x39998c0, m=0x7f19c2a157c0, local_signal_index=1, argv=0x7fffd91966a0) at kernel/qobject.cpp:3399
#29 0x00007f19c1c90538 in QAction::triggered (this=0x39998c0, _t1=false) at .moc/debug-shared/moc_qaction.cpp:263
#30 0x00007f19c1c8f81e in QAction::activate (this=0x39998c0, event=QAction::Trigger) at kernel/qaction.cpp:1245
#31 0x00007f19c1c8f542 in QAction::event (this=0x39998c0, e=0x7fffd9196e70) at kernel/qaction.cpp:1162
#32 0x00007f19c30d48c7 in KAction::event (this=0x39998c0, event=0x7fffd9196e70) at /data/Projetos/kdesvn/kdelibs/kdeui/actions/kaction.cpp:129
#33 0x00007f19c1ca17ea in QApplicationPrivate::notify_helper (this=0x2457580, receiver=0x39998c0, e=0x7fffd9196e70) at kernel/qapplication.cpp:4245
#34 0x00007f19c1c9efd6 in QApplication::notify (this=0x7fffd9198740, receiver=0x39998c0, e=0x7fffd9196e70) at kernel/qapplication.cpp:3669
#35 0x00007f19c31cab9f in KApplication::notify (this=0x7fffd9198740, receiver=0x39998c0, event=0x7fffd9196e70) at /data/Projetos/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:302
#36 0x00007f19c4fe8540 in QCoreApplication::notifyInternal (this=0x7fffd9198740, receiver=0x39998c0, event=0x7fffd9196e70) at kernel/qcoreapplication.cpp:704
#37 0x00007f19c4fec4c5 in QCoreApplication::sendEvent (receiver=0x39998c0, event=0x7fffd9196e70) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#38 0x00007f19c1ce94bc in QShortcutMap::dispatchEvent (this=0x24576a8, e=0x7fffd91975d0) at kernel/qshortcutmap.cpp:879
#39 0x00007f19c1ce7ba4 in QShortcutMap::tryShortcutEvent (this=0x24576a8, o=0x3a20c20, e=0x7fffd91975d0) at kernel/qshortcutmap.cpp:364
#40 0x00007f19c1c9f28a in QApplication::notify (this=0x7fffd9198740, receiver=0x3a20c20, e=0x7fffd91975d0) at kernel/qapplication.cpp:3711
#41 0x00007f19c31cab9f in KApplication::notify (this=0x7fffd9198740, receiver=0x3a20c20, event=0x7fffd91975d0) at /data/Projetos/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:302
#42 0x00007f19c4fe8540 in QCoreApplication::notifyInternal (this=0x7fffd9198740, receiver=0x3a20c20, event=0x7fffd91975d0) at kernel/qcoreapplication.cpp:704
#43 0x00007f19c1ca3dbb in QCoreApplication::sendSpontaneousEvent (receiver=0x3a20c20, event=0x7fffd91975d0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#44 0x00007f19c1ca1b1f in qt_sendSpontaneousEvent (receiver=0x3a20c20, event=0x7fffd91975d0) at kernel/qapplication.cpp:5222
#45 0x00007f19c1d7c844 in QKeyMapper::sendKeyEvent (keyWidget=0x3a20c20, grab=false, type=QEvent::KeyPress, code=88, modifiers=..., text=..., autorepeat=false, count=1, nativeScanCode=53, 
    nativeVirtualKey=120, nativeModifiers=20) at kernel/qkeymapper_x11.cpp:1861
#46 0x00007f19c1d7c539 in QKeyMapperPrivate::translateKeyEvent (this=0x248c340, keyWidget=0x3a20c20, event=0x7fffd91982b0, grab=false) at kernel/qkeymapper_x11.cpp:1831
#47 0x00007f19c1d438a7 in QApplication::x11ProcessEvent (this=0x7fffd9198740, event=0x7fffd91982b0) at kernel/qapplication_x11.cpp:3392
#48 0x00007f19c1d7ea33 in x11EventSourceDispatch (s=0x244a800, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#49 0x00007f19c04cb1fe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#50 0x00007f19c04cebb8 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#51 0x00007f19c04cece0 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#52 0x00007f19c502510b in QEventDispatcherGlib::processEvents (this=0x2456b30, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#53 0x00007f19c1d7f12c in QGuiEventDispatcherGlib::processEvents (this=0x2456b30, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#54 0x00007f19c4fe55bc in QEventLoop::processEvents (this=0x7fffd9198690, flags=...) at kernel/qeventloop.cpp:149
#55 0x00007f19c4fe5712 in QEventLoop::exec (this=0x7fffd9198690, flags=...) at kernel/qeventloop.cpp:201
#56 0x00007f19c4fe8c42 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#57 0x00007f19c1c9eb68 in QApplication::exec () at kernel/qapplication.cpp:3578
#58 0x00007f19b642d43b in kdemain (argc=2, argv=0x23a06c0) at /data/Projetos/kdesvn/kdesdk/kate/app/katemain.cpp:377
#59 0x0000000000406bd8 in launch (argc=2, _name=0x2418ed8 "/data/kde/bin/kate", args=0x2418eee "\001", cwd=0x0, envc=1, envs=0x2418f03 "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x2418f0b "matryeva;1258921247;471234;14416_TIME24090879") at /data/Projetos/kdesvn/kdelibs/kinit/kinit.cpp:705
#60 0x0000000000407d3c in handle_launcher_request (sock=8, who=0x40c3cc "launcher") at /data/Projetos/kdesvn/kdelibs/kinit/kinit.cpp:1197
#61 0x00000000004085ed in handle_requests (waitForPid=0) at /data/Projetos/kdesvn/kdelibs/kinit/kinit.cpp:1390
#62 0x0000000000409b80 in main (argc=4, argv=0x7fffd919a708, envp=0x7fffd919a730) at /data/Projetos/kdesvn/kdelibs/kinit/kinit.cpp:1825

Possible duplicates by query: bug 200989, bug 197313, bug 210037.

Reported using DrKonqi
Comment 1 Pascal Létourneau 2009-11-22 23:03:48 UTC
SVN commit 1052974 by pletourn:

Don't crash

BUG:215745


 M  +2 -0      katedocument.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1052974
Comment 2 Tomaz Canabrava 2009-11-22 23:06:33 UTC
Thanks, you deserve a hug.


On Sunday 22 November 2009 19:03:50 Pascal Létourneau wrote:
> https://bugs.kde.org/show_bug.cgi?id=215745
> 
> 
> Pascal Létourneau <pascal.letourneau@gmail.com> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - Status|NEW                         |RESOLVED
>          Resolution|                            |FIXED
> 
> 
> 
> 
> --- Comment #1 from Pascal Létourneau <pascal letourneau gmail com> 
>  2009-11-22 23:03:48 --- SVN commit 1052974 by pletourn:
> 
> Don't crash
> 
> BUG:215745
> 
> 
>  M  +2 -0      katedocument.cpp
> 
> 
> WebSVN link: http://websvn.kde.org/?view=rev&revision=1052974
>