Don't crash

BUG:215745

svn path=/trunk/KDE/kdelibs/kate/; revision=1052974